Fixed responsive design issues

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -378,6 +378,7 @@ Author URI: gnodesign.com
 	****************/
     .movie-detail-intro2 .movie-poster,
     .movie-detail-intro2 .movie-poster img{
+        height: unset !important;
         width: 100%;
     }
     /**************** 
