Fixed poster image aspect ratio to 25:37

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4442,6 +4442,7 @@ ul.blog-posts-widget .blog-content .blog-text span {
 
 .movie-box-1 .poster img {
     width: 100%;
+    aspect-ratio: 25/37;
 }
 
 
